Updated a bit of test.